<resources>
    <string name="app_name">FoodApp</string>
    <string name="menu">Menu</string>
    <string name="add_food">Add Food</string>
    <string name="listfood">All Foods</string>
    <string name="taom_nomi">Taom nomi</string>
    <string name="kerakli_maxsulotlar">Kerakli maxsulotlar</string>
    <string name="save">Save</string>
    <string name="taom_tayyorlash_tartibi">Taom tayyorlash tartibi</string>
    <string name="kerakli_maxsulotlari">Kerakli maxsulotlari</string>
    <string name="yes">Ha</string>
    <string name="nooo">Yo\'q</string>

</resources>