<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFoodActivity"
    android:background="@drawable/about">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textStyle="italic"
            />

        <TextView

            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kerakli_maxsulotlari"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/txt_Food_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taom_tayyorlash_tartibi"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="italic"/>


        <TextView
            android:id="@+id/txt_preperation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taom_tayyorlash_tartibi"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>


    </LinearLayout>

</ScrollView>